Ajustes na seção de estoques e integração inicial do mesmo com o banco de dados
Foi realizado um ajuste na parte relacionada ao estoque, porém devido a limitações do banco de dados utilizado não foi possível realizar a conexão do estoque com o banco de dados a primeiro momento